samples/_failures_safe/1761337055_56b08e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43e6df55.c: In function ‘main’:
./samples/SAFE/__tmp_43e6df55.c:152:16: error: missing terminating " character
  152 |         printf("\nCurrent state: %s | Errors: %u |
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_43e6df55.c:152:9: error: expected expression at end of input
  152 |         printf("\nCurrent state: %s | Errors: %u |
      |         ^~~~~~
./samples/SAFE/__tmp_43e6df55.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_43e6df55.c:152:9: error: expected declaration or statement at end of input
